Bug 361605 - kmail crash on double click email
Summary: kmail crash on double click email
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Chakra Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-04-10 18:51 UTC by Luca Giambonini
Modified: 2016-04-16 04:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Giambonini 2016-04-10 18:51:12 UTC
Application: kontact (5.1.90 rc)

Qt Version: 5.6.0
Frameworks Version: 5.21.0
Operating System: Linux 4.5.0-1-CHAKRA x86_64
Distribution: "Chakra"

-- Information about the crash:
kmail 16.03.90

How to reproduce:
double click and email from the email list. (I tested with a nestled email, one from a list of replies)

Results: kmail/contact crash.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9063055840 (LWP 9372))]

Thread 23 (Thread 0x7f90603e3700 (LWP 9373)):
#0  0x00007f9076f3718d in poll () from /usr/lib/libc.so.6
#1  0x00007f907149fae2 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f90714a1757 in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f9062d6a329 in QXcbEventReader::run (this=0xea5c70) at qxcbconnection.cpp:1313
#4  0x00007f9077840238 in QThreadPrivate::start (arg=0xea5c70) at thread/qthread_unix.cpp:340
#5  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 22 (Thread 0x7f9057fff700 (LWP 9374)):
#0  0x00007f906f353336 in g_mutex_unlock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f906f308b7f in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309183 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f90500008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f9057ffed50, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f907783b434 in QThread::exec (this=this@entry=0x7f9079d5dd40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:503
#7  0x00007f9079cea495 in QDBusConnectionManager::run (this=0x7f9079d5dd40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:181
#8  0x00007f9077840238 in QThreadPrivate::start (arg=0x7f9079d5dd40 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:340
#9  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 21 (Thread 0x7f9056dee700 (LWP 9376)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074f023fb in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f02439 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 20 (Thread 0x7f900f8ae700 (LWP 9377)):
#0  0x00007f9076f4c707 in __libc_disable_asynccancel () from /usr/lib/libc.so.6
#1  0x00007f9076f33179 in read () from /usr/lib/libc.so.6
#2  0x00007f906f351b41 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f308ca4 in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#4  0x00007f906f309183 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#6  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f90080008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#7  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f900f8add80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#8  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#9  0x00007f9077840238 in QThreadPrivate::start (arg=0xfe6150) at thread/qthread_unix.cpp:340
#10 0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#11 0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 19 (Thread 0x7f9007fff700 (LWP 9378)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c0f1c4 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 18 (Thread 0x7f90077fe700 (LWP 9379)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c101f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 17 (Thread 0x7f9006ffd700 (LWP 9380)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c101f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 16 (Thread 0x7f90067fc700 (LWP 9381)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c101f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 15 (Thread 0x7f9005ffb700 (LWP 9382)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c101f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 14 (Thread 0x7f90057fa700 (LWP 9384)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c101f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 13 (Thread 0x7f9004ff9700 (LWP 9385)):
#0  0x00007f9070e7b03f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f9074c101f3 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f9074f32291 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 12 (Thread 0x7f8fe0478700 (LWP 9386)):
#0  0x00007f906f35330d in g_mutex_lock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f906f308d57 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309248 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fd80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fe0477d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007f9077840238 in QThreadPrivate::start (arg=0x18926c0) at thread/qthread_unix.cpp:340
#8  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 11 (Thread 0x7f8fdfc77700 (LWP 9387)):
#0  0x00007f9077a68905 in idleTimerSourcePrepare (source=<optimized out>, timeout=0x7f8fdfc76bb4) at kernel/qeventdispatcher_glib.cpp:196
#1  0x00007f906f308730 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309109 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fd00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fdfc76d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007f9077840238 in QThreadPrivate::start (arg=0x1371300) at thread/qthread_unix.cpp:340
#8  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f8fdf476700 (LWP 9388)):
#0  0x00007f9076f3718d in poll () from /usr/lib/libc.so.6
#1  0x00007f906f3091e5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fd40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fdf475d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f9077840238 in QThreadPrivate::start (arg=0x1890a50) at thread/qthread_unix.cpp:340
#7  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f8fdea57700 (LWP 9392)):
#0  0x00007f9076f3718d in poll () from /usr/lib/libc.so.6
#1  0x00007f906f3091e5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fc80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fdea56d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f9077840238 in QThreadPrivate::start (arg=0x1653520) at thread/qthread_unix.cpp:340
#7  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f8fdd52d700 (LWP 9394)):
#0  0x00007f906f3086e1 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#1  0x00007f906f309109 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fcc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fdd52cd80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f9077840238 in QThreadPrivate::start (arg=0x1953910) at thread/qthread_unix.cpp:340
#7  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f8fc7fff700 (LWP 9408)):
#0  0x00007f9076f3316d in read () from /usr/lib/libc.so.6
#1  0x00007f906f351b41 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f308ca4 in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f309183 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fc00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#6  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fc7ffed80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#7  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#8  0x00007f9077840238 in QThreadPrivate::start (arg=0x15221b0) at thread/qthread_unix.cpp:340
#9  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#10 0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f8fc77fe700 (LWP 9410)):
#0  0x00007f9076f3718d in poll () from /usr/lib/libc.so.6
#1  0x00007f906f3091e5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fb80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fc77fdd80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f9077840238 in QThreadPrivate::start (arg=0x243cf10) at thread/qthread_unix.cpp:340
#7  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f8fc6ffd700 (LWP 9412)):
#0  0x00007f9076f3718d in poll () from /usr/lib/libc.so.6
#1  0x00007f906f3091e5 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fbc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fc6ffcd80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f9077840238 in QThreadPrivate::start (arg=0x1f6f380) at thread/qthread_unix.cpp:340
#7  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f8fc67fc700 (LWP 9414)):
#0  0x00007f906f35330d in g_mutex_lock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f906f30873b in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309109 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fb00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fc67fbd80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007f9077840238 in QThreadPrivate::start (arg=0x2165390) at thread/qthread_unix.cpp:340
#8  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f8fb7fff700 (LWP 9433)):
#0  0x00007f906f353338 in g_mutex_unlock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f906f308d6b in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309248 in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fac0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#5  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fb7ffed80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#7  0x00007f9077840238 in QThreadPrivate::start (arg=0x87b59b0) at thread/qthread_unix.cpp:340
#8  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f8fb71f9700 (LWP 9491)):
#0  0x00007f906f353338 in g_mutex_unlock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f906f3090fd in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f9077a691fb in QEventDispatcherGlib::processEvents (this=0x7f8fa40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:419
#4  0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7f8fb71f8d80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007f907783b434 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:503
#6  0x00007f9077840238 in QThreadPrivate::start (arg=0xb748870) at thread/qthread_unix.cpp:340
#7  0x00007f9070e75464 in start_thread () from /usr/lib/libpthread.so.0
#8  0x00007f9076f4012d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f9063055840 (LWP 9372)):
[KCrash Handler]
#6  0x00007f8fe3c3c008 in KMReaderMainWin::showMessage (this=this@entry=0xb853300, encoding=..., msg=..., parentCollection=...) at /chakra/desktop/kdepim/src/kdepim-16.03.90/kmail/kmreadermainwin.cpp:154
#7  0x00007f8fe3c45e90 in KMMainWidget::slotItemsFetchedForActivation (this=0x212e3c0, command=<optimized out>) at /chakra/desktop/kdepim/src/kdepim-16.03.90/kmail/kmmainwidget.cpp:2611
#8  0x00007f9077a400ee in QtPrivate::QSlotObjectBase::call (a=0x7ffefef91be0, r=0x212e3c0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#9  QMetaObject::activate (sender=sender@entry=0x21a4020, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffefef91be0) at kernel/qobject.cpp:3715
#10 0x00007f9077a40687 in QMetaObject::activate (sender=sender@entry=0x21a4020, m=m@entry=0x7f8fe3ff67e0 <KMCommand::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffefef91be0) at kernel/qobject.cpp:3595
#11 0x00007f8fe3d40422 in KMCommand::completed (this=this@entry=0x21a4020, _t1=_t1@entry=0x21a4020) at /chakra/desktop/kdepim/src/build/kmail/moc_kmcommands.cpp:195
#12 0x00007f8fe3c2cffb in KMCommand::slotPostTransfer (this=0x21a4020, result=KMCommand::OK) at /chakra/desktop/kdepim/src/kdepim-16.03.90/kmail/kmcommands.cpp:295
#13 0x00007f9077a400ee in QtPrivate::QSlotObjectBase::call (a=0x7ffefef91d70, r=0x21a4020, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#14 QMetaObject::activate (sender=sender@entry=0x21a4020, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffefef91d70) at kernel/qobject.cpp:3715
#15 0x00007f9077a40687 in QMetaObject::activate (sender=sender@entry=0x21a4020, m=m@entry=0x7f8fe3ff67e0 <KMCommand::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffefef91d70) at kernel/qobject.cpp:3595
#16 0x00007f8fe3d403be in KMCommand::messagesTransfered (this=this@entry=0x21a4020, _t1=_t1@entry=KMCommand::OK) at /chakra/desktop/kdepim/src/build/kmail/moc_kmcommands.cpp:188
#17 0x00007f8fe3c2f310 in KMCommand::slotJobFinished (this=0x21a4020) at /chakra/desktop/kdepim/src/kdepim-16.03.90/kmail/kmcommands.cpp:400
#18 0x00007f9077a400ee in QtPrivate::QSlotObjectBase::call (a=0x7ffefef91f20, r=0x21a4020, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#19 QMetaObject::activate (sender=0xb7f0f20, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3715
#20 0x00007f9078ad3fc2 in KJob::result(KJob*, KJob::QPrivateSignal) () from /usr/lib/libKF5CoreAddons.so.5
#21 0x00007f9078ad5901 in KJob::finishJob(bool) () from /usr/lib/libKF5CoreAddons.so.5
#22 0x00007f907651add3 in ?? () from /usr/lib/libKF5AkonadiCore.so.5
#23 0x00007f9077a40b99 in QObject::event (this=0xb7f0f20, e=<optimized out>) at kernel/qobject.cpp:1256
#24 0x00007f9078595b8c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xb7f0f20, e=0x2005470) at kernel/qapplication.cpp:3714
#25 0x00007f907859ae16 in QApplication::notify (this=0x7ffefef92780, receiver=0xb7f0f20, e=0x2005470) at kernel/qapplication.cpp:3495
#26 0x00007f9077a13a48 in QCoreApplication::notifyInternal2 (receiver=0xb7f0f20, event=event@entry=0x2005470) at kernel/qcoreapplication.cpp:1015
#27 0x00007f9077a1590a in QCoreApplication::sendEvent (event=0x2005470, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:227
#28 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0xe85e90) at kernel/qcoreapplication.cpp:1650
#29 0x00007f9077a15dc8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1508
#30 0x00007f9077a68dd3 in postEventSourceDispatch (s=0xed3830) at kernel/qeventdispatcher_glib.cpp:270
#31 0x00007f906f308fba in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0x00007f906f309248 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0x00007f906f309322 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0x00007f9077a691df in QEventDispatcherGlib::processEvents (this=0xed66d0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#35 0x00007f9077a11c2a in QEventLoop::exec (this=this@entry=0x7ffefef924e0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#36 0x00007f9077a1a0ac in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1285
#37 0x00000000004044ef in ?? ()
#38 0x00007f9076e77610 in __libc_start_main () from /usr/lib/libc.so.6
#39 0x00000000004049f9 in _start ()

Reported using DrKonqi
Comment 1 Christian Trippe 2016-04-15 17:50:31 UTC
I see the same crash in openSUSE. It also happens with standalone kmail, so I guess this might be the better product. I am not sure if this is related but starting with kmail 16.03.90 where also the header in the normal mail view is missing and cannot be chosen from the menu.
Comment 2 Wolfgang Bauer 2016-04-15 19:32:51 UTC
(In reply to Christian Trippe from comment #1)
> I am not sure if this is related
> but starting with kmail 16.03.90 where also the header in the normal mail
> view is missing and cannot be chosen from the menu.

Installing kdepim-addons should fix that.
We need to add a dependency there...
Comment 3 Laurent Montel 2016-04-15 21:32:05 UTC
Git commit 648eb9094de4584135641de449c6ba0a0f5e11be by Montel Laurent.
Committed on 15/04/2016 at 21:31.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 361605 - kmail crash on double click email

FIXED-IN: 5.2.1

M  +3    -1    kmail/kmreadermainwin.cpp

http://commits.kde.org/kdepim/648eb9094de4584135641de449c6ba0a0f5e11be
Comment 4 Christian Trippe 2016-04-16 04:47:18 UTC
Thanks for the quick fix and for the hint about kdepim-addons. Installing this missing packages also "fixes" the crash for me.