Fix Bug 361605 - kmail crash on double click email

FIXED-IN: 5.2.1
BUG: 361605